# OpenGL-Engine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  text.txt
src/: main.cpp
src/camera/: camera.cpp  camera.h
src/engine/: engine.cpp  engine.h
src/libs/glad/: glad.cpp  glad.h
src/log/: log.cpp  log.h
src/mesh/: cube.cpp  cube.h  mesh.cpp  mesh.h  plane.cpp  plane.h  quad.cpp  quad.h  sphere.cpp  sphere.h  torus.cpp  torus.h
src/renderer/: pbr.cpp  pbr.h  render_target.cpp  render_target.h  renderer.cpp  renderer.h
src/scene/: background.cpp  background.h  scene.cpp  scene.h  scene_object.cpp  scene_object.h
src/scene/light/: light_object.cpp  light_object.h
src/shader/: basic_material.cpp  basic_material.h  material.cpp  material.h  shader.cpp  shader.h  texture.cpp  texture.h  texture_cube.cpp  texture_cube.h
src/utility/: object_loader.cpp  object_loader.h  utility.cpp  utility.h
src/window/: imgui_handler.cpp  imgui_handler.h  main_window.cpp  main_window.h
